opt: find_library usage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,9 @@
 cmake_minimum_required(VERSION 3.30)
-project(nvsci_test LANGUAGES C CUDA)
-
-message("CUDA Language Check Result: ${CMAKE_CUDA_COMPILER_ID}")
+project(nvsci_test LANGUAGES CXX CUDA)
 
 set(CMAKE_CUDA_ARCHITECTURES native)
 
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)  # 生成 compile_commands.json
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_LIBRARY_PATH /usr/lib/aarch64-linux-gnu/tegra)
 
@@ -17,29 +15,20 @@ if(NOT NVSCICOMMON_INCLUDE_DIR)
     message(FATAL_ERROR "NvSci headers not found! Install JetPack first.")
 endif()
 
-# find_library(CUDA_LIBRARY
-#   NAMES cuda
-#   PATHS /usr/lib/aarch64-linux-gnu/tegra
-# )
 find_library(NVSCIBUF_LIB
   NAMES nvscibuf
-  PATHS /usr/lib/aarch64-linux-gnu/tegra
 )
 find_library(NVSCISYNC_LIB
   NAMES nvscisync
-  PATHS /usr/lib/aarch64-linux-gnu/tegra
 )
 find_library(NVSCIEVENT_LIB
   NAMES nvscievent
-  PATHS /usr/lib/aarch64-linux-gnu/tegra
 )
 find_library(NVSCIIPC_LIB
   NAMES nvsciipc
-  PATHS /usr/lib/aarch64-linux-gnu/tegra
 )
 find_library(NVSCISTREAM_LIB
   NAMES nvscistream
-  PATHS /usr/lib/aarch64-linux-gnu/tegra
 )
 
 if(NOT NVSCIBUF_LIB OR NOT NVSCISYNC_LIB)
